[workspace]
members = [ "derive", "lib", "tool"] 
resolver = "2"
     
[workspace.package]
name = "iepub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "epub电子书读写"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
iepub = { path = "lib" }