[workspace]
members = [ "derive", "lib"] 
resolver = "2"
rust-version = "1.84.0"

[workspace.package]
name = "iepub"
version = "1.1.2"
edition = "2021"
license = "MIT"
description = "epub、mobi电子书读写"
repository = "https://github.com/inkroom/iepub"
readme = "./README.md"
keywords = ["epub","mobi","azw","ebook"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[patch.crates-io]
iepub = { path = "lib" }
