[package]
name = "iepub"
version = {workspace=true}
edition = "2021"
license = { workspace = true }
description = { workspace = true }

repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
[dependencies]
iepub-derive={path="../derive",version="0.6.3"}
zip = "2.1.3"
quick-xml = "0.34.0"

ab_glyph = {version="0.2.29",optional=true}
image = {version="0.25.5", default-features = false, features =["jpeg"],optional=true}
imageproc = {version="0.25.0",optional=true}



[dev-dependencies]
tinyget = { version = "1.0.2", features = ["https"] }

[features]
cover = ["dep:ab_glyph","dep:image","dep:imageproc"]
