[package]
name = "iepub"
version = {workspace=true}
edition = "2021"
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[dependencies]
zip = "4.0.0"
quick-xml = "0.37.5"
ab_glyph = { version = "0.2.29", optional = true }
imageproc = { version = "0.25.0", optional = true}
iepub-derive = { path = "../derive", version = "0.8.5"}
image = { version = "0.25.6", default-features = false, features = ["jpeg"], optional = true}


[dev-dependencies]
tinyget = { version = "1.1.2", features = ["https"] }

[features]
cover = ["dep:ab_glyph","dep:image","dep:imageproc"]
no_nav=[]